////
This file is intended to be read in HTML via translation with asciidoc.
////

= IronBee Development
:toc2:

== IronBee v0.12.1

**Development**

- Add missing headers for use with newer boost versions.

== IronBee v0.12.0

**Development**

- ABI Change.
- Removed "fields" from log events as this did not make sense with Predicate or other non-field centric rules. Instead use a tag (e.g., "loc/url/params").

**Modules**

- New module, `ibmod_utf8`, provides transformations for handling UTF-8 validation, normalization and conversion.

== IronBee v0.11.3

**Bugs Fixed**

- Fixed potential buffer overread for long messages that were truncated.

== IronBee v0.11.2

**Bugs Fixed**

- Fixed issue where requests with a body may hang when response was non-2xx.
- Fixed issue where event tags were not being copied from Lua memory space and under heavy load may cause corruption if garbage collected.

== IronBee v0.11.1

**Engine**

- Fixed ironbee control channel socket location and make reading non-blocking.
- Allow for expanding rule tags when an event is triggered (e.g., tag:prefix/%{CAPTURE:0}).

**Bugs Fixed**

- Fixed issue where event tags may be duplicated.
- Fixed issue with ib_strstr() that may crash if needle was biggerthan haystack (patch from Jay Deiman).
- Fixed some potential locking issues.
- Fixed potential use of negative index and missing check for NULL in ib_site_create() (report from Rodrigo Branco).

== IronBee v0.11.0

**Build**

- There is now an `experimental` directory that contains code that is not yet ready for production.  Experimental code is not built by default, may lack unit tests or documentation, and is not built by default.  It may be built by running `make` inside the experimental directory.

**Documentation**

- Significant documentation updates, including an updated section on inspection.
- Added an introduction to predicate for rule writers: predicate/guide.html.

**Engine**

- Blocking has been overhauled.