@@ -49,11 +49,9 @@ struct tsib_ssn_ctx {
     char remote_ip[ADDRSIZE];
     char local_ip[ADDRSIZE];
     TSHttpTxn txnp; /* hack: conn data requires txnp to access */
-    TSMutex ts_mutex; /**< Store mutex for use in many continuations. */
     /* Keep track of whether this is open and has active transactions */
     int txn_count;
     int closing;
-    ib_lock_t *mutex;
     /* include the contp, so we can delay destroying it from the event */
     TSCont contp;
 };
@@ -174,7 +172,6 @@ static void tsib_ssn_ctx_destroy(tsib_ssn_ctx * ssndata)
      * we just mark the session as closing, but leave actually closing it
      * for the TXN_CLOSE if there's a TXN
      */
-    ib_lock_lock(ssndata->mutex);
     if (ssndata->txn_count == 0) { /* No outstanding TXN_CLOSE to come. */
         if (ssndata->iconn != NULL) {
             ib_conn_t *conn = ssndata->iconn;
@@ -193,15 +190,11 @@ static void tsib_ssn_ctx_destroy(tsib_ssn_ctx * ssndata)
         TSContDataSet(contp, NULL);
         ssndata->contp = NULL;
 
-        /* Unlock has to come first 'cos ContDestroy destroys the mutex */
         TSContDestroy(contp);
-        ib_lock_unlock(ssndata->mutex);
-        ib_lock_destroy_malloc(ssndata->mutex);
         TSfree(ssndata);
     }
     else {
         ssndata->closing = 1;
-        ib_lock_unlock(ssndata->mutex);
     }
 }
 
@@ -403,7 +396,6 @@ static void tsib_txn_ctx_destroy(tsib_txn_ctx *txndata)
                     tx->conn, tx->conn->tx_count, tx, tx->id, ssndata->txn_count);
     tx_finish(tx);
 
-    ib_lock_lock(ssndata->mutex);
     ib_tx_destroy(tx);
 
     txndata->ssn = NULL;
@@ -427,13 +419,10 @@ static void tsib_txn_ctx_destroy(tsib_txn_ctx *txndata)
         }
         TSContDataSet(ssndata->contp, NULL);
         TSContDestroy(ssndata->contp);
-        ib_lock_unlock(ssndata->mutex);
-        ib_lock_destroy_malloc(ssndata->mutex);
         TSfree(ssndata);
     }
     else {
         --(ssndata->txn_count);
-        ib_lock_unlock(ssndata->mutex);
     }
     TSfree(txndata);
 }
@@ -451,14 +440,12 @@ static void tsib_txn_ctx_destroy(tsib_txn_ctx *txndata)
  */
 int ironbee_plugin(TSCont contp, TSEvent event, void *edata)
 {
-    ib_status_t rc;
     TSCont mycont;
     TSHttpTxn txnp = (TSHttpTxn) edata;
     TSHttpSsn ssnp = (TSHttpSsn) edata;
     tsib_txn_ctx *txndata;
     tsib_ssn_ctx *ssndata;
     tsib_hdr_outcome status;
-    TSMutex ts_mutex = NULL;
 
     TSDebug("ironbee", "Entering ironbee_plugin with %d", event);
     switch (event) {
@@ -473,18 +460,14 @@ int ironbee_plugin(TSCont contp, TSEvent event, void *edata)
              * what we can and must do: create a new contp whose
              * lifetime is our ssn
              */
-            ts_mutex = TSMutexCreate();
-            mycont = TSContCreate(ironbee_plugin, ts_mutex);
+            mycont = TSContCreate(ironbee_plugin, NULL);
             TSHttpSsnHookAdd (ssnp, TS_HTTP_TXN_START_HOOK, mycont);
             ssndata = TSmalloc(sizeof(*ssndata));
             memset(ssndata, 0, sizeof(*ssndata));
             /* The only failure here is EALLOC, and if that happens
              * we're ****ed anyway
              */
-            rc = ib_lock_create_malloc(&(ssndata->mutex));
-            assert(rc == IB_OK);
             ssndata->contp = mycont;
-            ssndata->ts_mutex = ts_mutex;
             TSContDataSet(mycont, ssndata);
 
             TSHttpSsnHookAdd (ssnp, TS_HTTP_SSN_CLOSE_HOOK, mycont);
@@ -500,7 +483,6 @@ int ironbee_plugin(TSCont contp, TSEvent event, void *edata)
             ib_engine_t *ib = NULL;
 
             ssndata = TSContDataGet(contp);
-            ib_lock_lock(ssndata->mutex);
 
             if (ssndata->iconn == NULL) {
                 rc = tsib_manager_engine_acquire(&ib);
@@ -510,7 +492,6 @@ int ironbee_plugin(TSCont contp, TSEvent event, void *edata)
                      * gets processed without intervention from Ironbee
                      * and is invisble when our SSN_CLOSE hook runs.
                      */
-                    ib_lock_unlock(ssndata->mutex);
                     TSHttpTxnReenable(txnp, TS_EVENT_HTTP_CONTINUE);
                     TSDebug("ironbee", "Decline from engine manager");
                     break;
@@ -583,14 +564,13 @@ int ironbee_plugin(TSCont contp, TSEvent event, void *edata)
             }
 
             ++ssndata->txn_count;
-            ib_lock_unlock(ssndata->mutex);
 
             ib_log_debug_tx(txndata->tx,
                             "TX CREATE: conn=%p tx=%p id=%s txn_count=%d",
                             ssndata->iconn, txndata->tx, txndata->tx->id,
                             txndata->ssn->txn_count);
 
-            mycont = TSContCreate(ironbee_plugin, ssndata->ts_mutex);
+            mycont = TSContCreate(ironbee_plugin, NULL);
             TSContDataSet(mycont, txndata);
 
             TSHttpTxnHookAdd(txnp, TS_HTTP_TXN_CLOSE_HOOK, mycont);
@@ -614,7 +594,6 @@ int ironbee_plugin(TSCont contp, TSEvent event, void *edata)
             break;
 
 noib_error:
-            ib_lock_unlock(ssndata->mutex);
 
             /* NULL txndata signals this to SEND_RESPONSE */
             TSContDataSet(contp, NULL);
